drkns 12.12.2020 16:18:28 +0000 - build 5716

1. Уточнение 5711.

svs 12.12.2020 17:57:34 +0300 - build 5715

1. SQLite 3.34.0

drkns 11.12.2020 00:01:03 +0000 - build 5714

1. Продолжение 5713.

drkns 10.12.2020 02:30:20 +0000 - build 5713

1. Еще одна попытка обойти баги Windows 10 (0003827 и т.п.).

2. Рефакторинг.

drkns 09.12.2020 08:34:58 +0000 - build 5712

1. Corrections of 5711.

drkns 08.12.2020 23:31:46 +0000 - build 5711

1. gh-311: Wrong counter of copied bytes

2. Рефакторинг.

yjh 01.12.2020 21:15:24 +0300 - build 5710

1. Ещё одно уточнение в запускателе.

drkns 22.11.2020 22:32:51 +0000 - build 5709

1. И еще.

drkns 22.11.2020 17:59:19 +0000 - build 5708

1. Пара уточнений в запускателе.

drkns 22.11.2020 01:28:27 +0000 - build 5707

1. Уточнения обработки исключений.

drkns 16.11.2020 22:47:34 +0000 - build 5706

1. Продолжение gh-290: частично возвращен поиск запускаемого. Без этого никак, увы.

drkns 16.11.2020 18:52:48 +0000 - build 5705

1. gh-290: New executor gives priority to folders over programs with the same name in PATH.

drkns 15.11.2020 22:37:26 +0000 - build 5704

1. Увеличена задержка удаления временных файлов, создаваемых по !@!.

drkns 15.11.2020 10:16:18 +0000 - build 5703

1. Уточнение работы запускателя.

drkns 14.11.2020 22:00:22 +0000 - build 5702

1. Экспериментально: переделан и упрощен запускатель (по мотивам https://forum.farmanager.com/viewtopic.php?t=12275):
   - Поиск запускаемого не производится - ОС видней.
   - System.Executor.UseAppPath и System.Executor.FullTitle больше нет.
   - Обработка ассоциаций отключена по умолчанию. Включается по System.Executor.UseAssociations = true.

2. Рефакторинг.

yjh 14.11.2020 21:21:30 +0300 - build 5701

1. Добавляем .msi к маске <arc>

drkns 11.11.2020 19:38:14 +0000 - build 5700

1. Уточнение 5698.1 еще раз.

drkns 08.11.2020 19:45:32 +0000 - build 5699

1. Уточнение 5698.1.

drkns 05.11.2020 19:04:14 +0000 - build 5698
