@@ -1,3 +1,7 @@
+drkns 14.12.2020 22:31:28 +0000 - build 5717
+
+1. Ещё одно уточнение в запускателе.
+
 drkns 12.12.2020 16:18:28 +0000 - build 5716
 
 1. Уточнение 5711.
